--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,4 +1,4 @@
-name: Pylint
+name: python
 
 on: [push]
 
@@ -9,18 +9,23 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.8
+    - name: Set up Python 3.9
       uses: actions/setup-python@v1
       with:
-        python-version: 3.8
+        python-version: 3.9
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install black flake8 isort mypy
-    - name: Analysing the code with pylint
+        pip install black flake8 isort mypy pytest
+        if [-f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: lint
       run: |
         black markov/
         flake8 markov/
         isort markov/
         mypy markov/
+    - name: test
+      run: |
+        pytest
+
         
